Adjust occupied locker color palette

--- a/style.html
+++ b/style.html
@@ -25,12 +25,12 @@
             /* Misc */
             --focus-ring: rgba(59, 130, 246, 0.25);
             --sidebar-width: 250px;
-            --em-uso-base: #b9c6da;
-            --em-uso-border-color: color-mix(in srgb, var(--em-uso-base) 70%, black 30%);
+            --em-uso-base: color-mix(in srgb, var(--secondary-color) 18%, white 82%);
+            --em-uso-border-color: color-mix(in srgb, var(--secondary-color) 42%, transparent);
             --em-uso-card-bg: var(--em-uso-base);
-            --em-uso-badge-bg: color-mix(in srgb, var(--em-uso-base) 55%, white 45%);
-            --em-uso-badge-text: color-mix(in srgb, var(--em-uso-base) 10%, black 90%);
-            --em-uso-text: color-mix(in srgb, var(--em-uso-base) 8%, black 92%);
+            --em-uso-badge-bg: color-mix(in srgb, var(--secondary-color) 24%, white 76%);
+            --em-uso-badge-text: color-mix(in srgb, var(--secondary-color) 70%, black 30%);
+            --em-uso-text: color-mix(in srgb, var(--secondary-color) 18%, var(--dark-color) 82%);
             --extended-badge-bg: color-mix(in srgb, var(--primary-color) 14%, white 86%);
             --extended-badge-text: color-mix(in srgb, var(--primary-color) 80%, black 20%);
             --extended-row-bg: color-mix(in srgb, var(--primary-color) 10%, white 90%);
