Prevent stale locker render batches

--- a/script.html
+++ b/script.html
@@ -2617,35 +2617,49 @@
                 return card;
             };
 
+            const cancelarAgendamento = typeof cancelIdleCallback === 'function'
+                ? cancelIdleCallback
+                : clearTimeout;
+            (renderizarArmarios.agendamentos || []).forEach(cancelarAgendamento);
+            renderizarArmarios.agendamentos = [];
+
+            const indiceInicio = 0;
+            let indiceAtual = indiceInicio;
+            renderizarArmarios.renderToken = (renderizarArmarios.renderToken || 0) + 1;
+            const tokenAtual = renderizarArmarios.renderToken;
+
             const processarLote = (deadline) => {
+                if (tokenAtual !== renderizarArmarios.renderToken) return;
                 const tamanhoLote = 50;
                 let itensProcessados = 0;
                 while (
                     itensProcessados < tamanhoLote &&
-                    armariosParaExibir[renderizarArmarios.indiceAtual]
+                    armariosParaExibir[indiceAtual]
                 ) {
                     elementos.armariosContainer.appendChild(
-                        criarCardArmario(armariosParaExibir[renderizarArmarios.indiceAtual])
+                        criarCardArmario(armariosParaExibir[indiceAtual])
                     );
-                    renderizarArmarios.indiceAtual += 1;
+                    indiceAtual += 1;
                     itensProcessados += 1;
                     if (deadline && deadline.timeRemaining && deadline.timeRemaining() <= 0) {
                         break;
                     }
                 }
-                if (renderizarArmarios.indiceAtual < armariosParaExibir.length) {
+                if (tokenAtual !== renderizarArmarios.renderToken) return;
+                if (indiceAtual < armariosParaExibir.length) {
                     const agendar = typeof requestIdleCallback === 'function'
                         ? requestIdleCallback
                         : (cb) => setTimeout(cb, 0);
-                    agendar(processarLote);
+                    const idAgendamento = agendar(processarLote);
+                    renderizarArmarios.agendamentos.push(idAgendamento);
                 }
             };
 
-            renderizarArmarios.indiceAtual = 0;
             const agendar = typeof requestIdleCallback === 'function'
                 ? requestIdleCallback
                 : (cb) => setTimeout(cb, 0);
-            agendar(processarLote);
+            const idAgendamento = agendar(processarLote);
+            renderizarArmarios.agendamentos.push(idAgendamento);
         }
         function atualizarResumoDashboardLocal() {
             const totais = {
