Refine occupied locker texture

--- a/style.html
+++ b/style.html
@@ -1315,11 +1315,11 @@
             overflow: hidden;
             border-left-color: #ffffff;
             background: repeating-linear-gradient(135deg,
-                color-mix(in srgb, var(--em-uso-base) 94%, white 6%) 0,
-                color-mix(in srgb, var(--em-uso-base) 94%, white 6%) 12px,
-                color-mix(in srgb, var(--em-uso-base) 84%, white 16%) 12px,
-                color-mix(in srgb, var(--em-uso-base) 84%, white 16%) 24px);
-            background-blend-mode: multiply;
+                color-mix(in srgb, var(--em-uso-base) 88%, white 12%) 0,
+                color-mix(in srgb, var(--em-uso-base) 88%, white 12%) 12px,
+                color-mix(in srgb, var(--em-uso-base) 80%, white 20%) 12px,
+                color-mix(in srgb, var(--em-uso-base) 80%, white 20%) 24px);
+            background-blend-mode: screen;
             color: var(--em-uso-text);
             box-shadow: 0 14px 32px color-mix(in srgb, var(--em-uso-border-color) 30%, transparent);
         }
@@ -1330,7 +1330,7 @@
             background-image: radial-gradient(circle at 20% 20%, color-mix(in srgb, var(--em-uso-base) 10%, transparent) 1px, transparent 0),
                 radial-gradient(circle at 80% 60%, color-mix(in srgb, var(--em-uso-base) 8%, transparent) 1px, transparent 0);
             background-size: 18px 18px, 22px 22px;
-            opacity: 0.35;
+            opacity: 0.2;
             pointer-events: none;
         }
         .armario-card.contingencia {
