Soften occupied locker stripe texture

--- a/style.html
+++ b/style.html
@@ -1315,10 +1315,10 @@
             overflow: hidden;
             border-left-color: #ffffff;
             background: repeating-linear-gradient(135deg,
-                color-mix(in srgb, var(--em-uso-base) 88%, white 12%) 0,
-                color-mix(in srgb, var(--em-uso-base) 88%, white 12%) 12px,
-                color-mix(in srgb, var(--em-uso-base) 80%, white 20%) 12px,
-                color-mix(in srgb, var(--em-uso-base) 80%, white 20%) 24px);
+                color-mix(in srgb, var(--em-uso-base) 70%, transparent 30%) 0,
+                color-mix(in srgb, var(--em-uso-base) 70%, transparent 30%) 12px,
+                color-mix(in srgb, var(--em-uso-base) 55%, transparent 45%) 12px,
+                color-mix(in srgb, var(--em-uso-base) 55%, transparent 45%) 24px);
             background-blend-mode: screen;
             color: var(--em-uso-text);
             box-shadow: 0 14px 32px color-mix(in srgb, var(--em-uso-border-color) 30%, transparent);
